Improve KeyManager API import operation
 -- process new validator in parallel instead of serial stream